# atcoder

./: .gitignore  CMakeLists.txt  go.mod  template.cpp  template.py
ABC-125/c/: main.go
ABC-126/b/: main.go
ABC-126/e/: main.go
ABC-126/f/: main.go
ABC-127/d/: main.go
ABC-127/e/: main.go
ABC-127/f/: main.go
ABC-128/b/: main.go
ABC-128/c/: main.go
ABC-128/e/: main.go
ABC-129/a/: main.go
ABC-129/b/: main.go
ABC-129/c/: main.go
ABC-129/d/: main.go
ABC-129/e/: main.go
ABC-130/c/: main.go
ABC-130/d/: main.go
ABC-130/e/: main.go
ABC-131/a/: main.go
ABC-131/c/: main.go
ABC-131/d/: main.go
ABC-131/e/: main.go
ABC-131/f/: main.go
ABC-133/a/: main.go
ABC-133/b/: main.go
ABC-133/d/: main.go
ABC-133/e/: main.go
ABC-133/f/: main.go
ABC-253/a/: main.py
ABC-253/b/: main.py
ABC-253/c/: main.py
ABC-253/d/: main.py
ABC-254/a/: main.py
ABC-254/b/: main.py
ABC-254/c/: main.py
ABC-254/d/: main.py
ABC-254/e/: main.py
ABC-256/a/: main.py
ABC-256/b/: main.py
ABC-256/c/: main.py
ABC-256/d/: main.py
ABC-256/e/: main.py
ABC-257/a/: main.py
ABC-257/b/: main.py
ABC-257/c/: main.py
ABC-257/d-1/: main.py
ABC-257/d-2/: main.py
ABC-257/e/: main.py
ABC-259/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
ABC-260/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
ABC-261/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
ABC-262/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
ABC-263/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
ABC-264/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
ABC-266/: A.cpp  B.cpp  C-cross-product.cpp  C.cpp  D.cpp  E.cpp
ABC-267/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
ABC-268/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
ABC-269/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
ABC-270/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
ABC-271/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
AGC-033/a/: main.go
AGC-033/b/: main.go
AGC-033/c/: main.go
AGC-034/b/: main.go
AGC-035/a/: main.go
AGC-035/b/: main.go
APG4b/: 1-00.cpp  ex1.cpp  ex10.cpp  ex11.cpp  ex12.cpp  ex13.cpp  ex14.cpp  ex15.cpp  ex16.cpp  ex17.cpp  ex18.cpp  ex19.cpp  ex2.cpp  ex20.cpp  ex21.cpp  ex22.cpp  ex23.cpp  ex24.cpp  ex25.cpp  ex26.cpp  ex3.cpp  ex4.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp
diverta-2019-2/a/: main.go
diverta-2019-2/b/: main.go
diverta-2019-2/c/: main.go
diverta-2019-2/d/: main.go
diverta-2019/a/: main.go
diverta-2019/b/: main.go
diverta-2019/c/: main.go
diverta-2019/d/: main.go
diverta-2019/e/: main.go
libs/cpp/: nck.cpp
libs/python/: minmaxheap.py  sortedmultiset.py  sortedset.py  test_sortedmultiset.py  test_sortedtest.py  union_find.py
m-solutions2019/a/: main.go
m-solutions2019/b/: main.go
m-solutions2019/c/: main.go
m-solutions2019/d/: main.go
m-solutions2019/e/: main.go
m-solutions2019/f/: main.go
practice/a/: main.py
practice/b/: main.py
typical90/: 006-2.cpp  006.cpp  007.cpp  008.cpp  009.cpp  010.cpp  011.cpp  012.cpp  013.cpp  014.cpp  015.cpp  016.cpp  017.cpp  018.cpp  019.cpp  020.cpp  021.cpp  022.cpp
typical90/001/: main.py
typical90/002/: main.py
typical90/003/: main.py
typical90/004/: main.py
typical90/005-1/: main.py
