cmake_minimum_required(VERSION 3.22)
project(atcoder)

set(CMAKE_CXX_STANDARD 17)

add_executable(APG4b_1-00 APG4b/1-00.cpp)
add_executable(APG4b_ex1 APG4b/ex1.cpp)
add_executable(APG4b_ex2 APG4b/ex2.cpp)
add_executable(APG4b_ex3 APG4b/ex3.cpp)
add_executable(APG4b_ex4 APG4b/ex4.cpp)
add_executable(APG4b_ex5 APG4b/ex5.cpp)
add_executable(APG4b_ex6 APG4b/ex6.cpp)
add_executable(APG4b_ex7 APG4b/ex7.cpp)
add_executable(APG4b_ex8 APG4b/ex8.cpp)
add_executable(APG4b_ex9 APG4b/ex9.cpp)
add_executable(APG4b_ex10 APG4b/ex10.cpp)
add_executable(APG4b_ex11 APG4b/ex11.cpp)
add_executable(APG4b_ex12 APG4b/ex12.cpp)
add_executable(APG4b_ex13 APG4b/ex13.cpp)
add_executable(APG4b_ex14 APG4b/ex14.cpp)
add_executable(APG4b_ex15 APG4b/ex15.cpp)
add_executable(APG4b_ex16 APG4b/ex16.cpp)
add_executable(APG4b_ex17 APG4b/ex17.cpp)
add_executable(APG4b_ex18 APG4b/ex18.cpp)
add_executable(APG4b_ex19 APG4b/ex19.cpp)
add_executable(APG4b_ex20 APG4b/ex20.cpp)
add_executable(APG4b_ex21 APG4b/ex21.cpp)
add_executable(APG4b_ex22 APG4b/ex22.cpp)
add_executable(APG4b_ex23 APG4b/ex23.cpp)
add_executable(APG4b_ex24 APG4b/ex24.cpp)
add_executable(APG4b_ex25 APG4b/ex25.cpp)
add_executable(APG4b_ex26 APG4b/ex26.cpp)
