cmake_minimum_required(VERSION 3.22)
project(atcoder)

set(CMAKE_CXX_STANDARD 17)

include_directories(.)

add_executable(template template.cpp)
add_executable(libs_cpp_nck libs/cpp/nck.cpp)
add_executable(APG4b_1-00 APG4b/1-00.cpp)
add_executable(APG4b_ex1 APG4b/ex1.cpp)
add_executable(APG4b_ex2 APG4b/ex2.cpp)
add_executable(APG4b_ex3 APG4b/ex3.cpp)
add_executable(APG4b_ex4 APG4b/ex4.cpp)
add_executable(APG4b_ex5 APG4b/ex5.cpp)
add_executable(APG4b_ex6 APG4b/ex6.cpp)
add_executable(APG4b_ex7 APG4b/ex7.cpp)
add_executable(APG4b_ex8 APG4b/ex8.cpp)
add_executable(APG4b_ex9 APG4b/ex9.cpp)
add_executable(APG4b_ex10 APG4b/ex10.cpp)
add_executable(APG4b_ex11 APG4b/ex11.cpp)
add_executable(APG4b_ex12 APG4b/ex12.cpp)
add_executable(APG4b_ex13 APG4b/ex13.cpp)
add_executable(APG4b_ex14 APG4b/ex14.cpp)
add_executable(APG4b_ex15 APG4b/ex15.cpp)
add_executable(APG4b_ex16 APG4b/ex16.cpp)
add_executable(APG4b_ex17 APG4b/ex17.cpp)
add_executable(APG4b_ex18 APG4b/ex18.cpp)
add_executable(APG4b_ex19 APG4b/ex19.cpp)
add_executable(APG4b_ex20 APG4b/ex20.cpp)
add_executable(APG4b_ex21 APG4b/ex21.cpp)
add_executable(APG4b_ex22 APG4b/ex22.cpp)
add_executable(APG4b_ex23 APG4b/ex23.cpp)
add_executable(APG4b_ex24 APG4b/ex24.cpp)
add_executable(APG4b_ex25 APG4b/ex25.cpp)
add_executable(APG4b_ex26 APG4b/ex26.cpp)
add_executable(typical90_006 typical90/006.cpp)
add_executable(typical90_006_2 typical90/006-2.cpp)
add_executable(typical90_007 typical90/007.cpp)
add_executable(typical90_008 typical90/008.cpp)
add_executable(typical90_009 typical90/009.cpp)
add_executable(typical90_010 typical90/010.cpp)
add_executable(typical90_011 typical90/011.cpp)
add_executable(typical90_012 typical90/012.cpp)
add_executable(typical90_013 typical90/013.cpp)
add_executable(typical90_014 typical90/014.cpp)
add_executable(typical90_015 typical90/015.cpp)
add_executable(typical90_016 typical90/016.cpp)
add_executable(typical90_017 typical90/017.cpp)
add_executable(typical90_018 typical90/018.cpp)
add_executable(ABC-259_A ABC-259/A.cpp)
add_executable(ABC-259_B ABC-259/B.cpp)
add_executable(ABC-259_C ABC-259/C.cpp)
add_executable(ABC-259_D ABC-259/D.cpp)
add_executable(ABC-259_E ABC-259/E.cpp)
add_executable(ABC-260_A ABC-260/A.cpp)
add_executable(ABC-260_B ABC-260/B.cpp)
add_executable(ABC-260_C ABC-260/C.cpp)
add_executable(ABC-260_D ABC-260/D.cpp)
add_executable(ABC-260_E ABC-260/E.cpp)
add_executable(ABC-261_A ABC-261/A.cpp)
add_executable(ABC-261_B ABC-261/B.cpp)
add_executable(ABC-261_C ABC-261/C.cpp)
add_executable(ABC-261_D ABC-261/D.cpp)
add_executable(ABC-261_E ABC-261/E.cpp)
add_executable(ABC-262_A ABC-262/A.cpp)
add_executable(ABC-262_B ABC-262/B.cpp)
add_executable(ABC-262_C ABC-262/C.cpp)
add_executable(ABC-262_D ABC-262/D.cpp)
add_executable(ABC-262_E ABC-262/E.cpp)
add_executable(ABC-263_A ABC-263/A.cpp)
add_executable(ABC-263_B ABC-263/B.cpp)
add_executable(ABC-263_C ABC-263/C.cpp)
add_executable(ABC-263_D ABC-263/D.cpp)
add_executable(ABC-263_E ABC-263/E.cpp)
add_executable(ABC-264_A ABC-264/A.cpp)
add_executable(ABC-264_B ABC-264/B.cpp)
add_executable(ABC-264_C ABC-264/C.cpp)
add_executable(ABC-264_D ABC-264/D.cpp)
add_executable(ABC-264_E ABC-264/E.cpp)
add_executable(ABC-264_F ABC-264/F.cpp)
add_executable(ABC-266_A ABC-266/A.cpp)
add_executable(ABC-266_B ABC-266/B.cpp)
add_executable(ABC-266_C ABC-266/C.cpp)
add_executable(ABC-266_D ABC-266/D.cpp)
add_executable(ABC-266_E ABC-266/E.cpp)
add_executable(ABC-267_A ABC-267/A.cpp)
add_executable(ABC-267_B ABC-267/B.cpp)
add_executable(ABC-267_C ABC-267/C.cpp)
add_executable(ABC-267_D ABC-267/D.cpp)
add_executable(ABC-267_E ABC-267/E.cpp)
